// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`G-UT-SNAPSHOT: Homepage Snapshot Tests should match homepage snapshot (authenticated, guided user, no active plan) 1`] = `
<div
  class="min-h-screen bg-gradient-to-br from-indigo-50 via-white to-purple-50 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900 relative overflow-hidden"
>
  <div
    class="fixed inset-0 pointer-events-none z-0"
  >
    <div
      class="absolute top-20 left-10 w-2 h-2 bg-indigo-400 rounded-full animate-pulse"
    />
    <div
      class="absolute top-40 right-20 w-3 h-3 bg-purple-400 rounded-full animate-bounce"
      style="animation-delay: 1s;"
    />
    <div
      class="absolute top-60 left-1/4 w-1 h-1 bg-blue-400 rounded-full animate-ping"
      style="animation-delay: 2s;"
    />
    <div
      class="absolute top-80 right-1/3 w-2 h-2 bg-pink-400 rounded-full animate-pulse"
      style="animation-delay: 0.5s;"
    />
    <div
      class="absolute bottom-40 left-1/3 w-3 h-3 bg-green-400 rounded-full animate-bounce"
      style="animation-delay: 1.5s;"
    />
    <div
      class="absolute bottom-60 right-10 w-1 h-1 bg-yellow-400 rounded-full animate-ping"
      style="animation-delay: 3s;"
    />
    <div
      class="absolute top-1/4 left-1/4 w-64 h-64 bg-gradient-to-r from-indigo-400/20 to-purple-400/20 rounded-full blur-3xl animate-pulse"
    />
    <div
      class="absolute bottom-1/4 right-1/4 w-80 h-80 bg-gradient-to-r from-purple-400/20 to-pink-400/20 rounded-full blur-3xl animate-pulse"
      style="animation-delay: 2s;"
    />
  </div>
  <div
    class="fixed inset-0 pointer-events-none z-0"
  >
    <div
      class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 opacity-20 dark:opacity-30"
    >
      <div
        class="absolute inset-0 bg-white/10 dark:bg-gray-800/20 rounded-full blur-sm scale-110"
      />
      <img
        alt="Elzatona Watermark"
        class="w-[400px] h-[400px] object-contain relative z-10"
        src="/elzatona-watermark.png"
      />
    </div>
  </div>
  <section
    class="relative pt-32 pb-20 px-4 sm:px-6 lg:px-8 z-10"
  >
    <div
      class="max-w-7xl mx-auto text-center"
    >
      <div
        class="mb-8"
      >
        <div
          class="relative inline-block"
        >
          <h1
            class="hero-title text-5xl md:text-6xl font-bold text-gray-900 dark:text-white mb-6 transition-all duration-1000 opacity-0 translate-y-8"
          >
            Master Frontend Development
            <span
              class="block bg-gradient-to-r from-indigo-600 via-purple-600 to-blue-600 bg-clip-text text-transparent"
            >
              Interviews
            </span>
          </h1>
        </div>
        <p
          class="text-xl text-gray-600 dark:text-gray-300 max-w-3xl mx-auto leading-relaxed transition-all duration-1000 delay-300 opacity-0 translate-y-8"
        >
          The complete platform to ace your frontend interviews
        </p>
      </div>
      <div
        class="mb-12 transition-all duration-1000 delay-500 opacity-0 translate-y-8"
      >
        <div
          class="relative inline-block"
        >
          <a
            href="/get-started"
          >
            <div
              class="absolute inset-0 bg-gradient-to-r from-white/20 to-transparent transform -skew-x-12 -translate-x-full group-hover:translate-x-full transition-transform duration-700"
            />
            <span
              class="relative z-10 flex items-center space-x-2"
            >
              <span
                data-testid="map-icon"
              >
                🗺️
              </span>
              <span>
                Choose Learning Plan
              </span>
              <span
                data-testid="arrow-right-icon"
              >
                →
              </span>
            </span>
          </a>
        </div>
      </div>
      <div
        class="transition-all duration-1000 delay-700 opacity-0 translate-y-8"
      >
        <div
          class="grid grid-cols-2 lg:grid-cols-4 gap-6 mb-12"
        >
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-4 animate-pulse"
            />
            <div
              class="h-8 bg-gray-200 dark:bg-gray-700 rounded mb-2 animate-pulse"
            />
            <div
              class="h-4 bg-gray-200 dark:bg-gray-700 rounded animate-pulse"
            />
          </div>
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-4 animate-pulse"
            />
            <div
              class="h-8 bg-gray-200 dark:bg-gray-700 rounded mb-2 animate-pulse"
            />
            <div
              class="h-4 bg-gray-200 dark:bg-gray-700 rounded animate-pulse"
            />
          </div>
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-4 animate-pulse"
            />
            <div
              class="h-8 bg-gray-200 dark:bg-gray-700 rounded mb-2 animate-pulse"
            />
            <div
              class="h-4 bg-gray-200 dark:bg-gray-700 rounded animate-pulse"
            />
          </div>
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-4 animate-pulse"
            />
            <div
              class="h-8 bg-gray-200 dark:bg-gray-700 rounded mb-2 animate-pulse"
            />
            <div
              class="h-4 bg-gray-200 dark:bg-gray-700 rounded animate-pulse"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
  <section
    class="py-16 px-4 sm:px-6 lg:px-8 bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm relative z-10"
  >
    <div
      class="max-w-7xl mx-auto"
    >
      <div
        class="text-center mb-12"
      >
        <h2
          class="text-3xl font-bold text-gray-900 dark:text-white mb-4 transition-all duration-1000 delay-800 opacity-0 translate-y-8"
        >
          How would you like to learn?
        </h2>
        <p
          class="text-xl text-gray-600 dark:text-gray-300 transition-all duration-1000 delay-900 opacity-0 translate-y-8"
        >
          Choose your learning style to get the most personalized experience.
        </p>
      </div>
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl mx-auto"
      >
        <div
          class="group bg-gradient-to-br from-indigo-50 to-purple-50 dark:from-indigo-900/20 dark:to-purple-900/20 rounded-2xl p-8 hover:shadow-xl transition-all duration-500 transform hover:scale-105 hover:-translate-y-2 cursor-pointer opacity-0 translate-y-8 ring-2 ring-indigo-400 ring-opacity-50 shadow-lg"
          style="transition-delay: 1000ms;"
        >
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-indigo-600 rounded-full flex items-center justify-center mx-auto mb-6 group-hover:scale-110 transition-transform duration-300"
            >
              <span
                data-testid="compass-icon"
              >
                🧭
              </span>
            </div>
            <h3
              class="text-2xl font-semibold text-gray-900 dark:text-white mb-4 group-hover:text-indigo-600 dark:group-hover:text-indigo-400 transition-colors"
            >
              Guided Learning
            </h3>
            <p
              class="text-gray-600 dark:text-gray-300 mb-6 group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
            >
              Follow structured learning paths designed by experts. Perfect for beginners or those who prefer a guided approach.
            </p>
            <div
              class="flex items-center justify-center space-x-2 text-indigo-600 dark:text-indigo-400 font-medium"
            >
              <span>
                Start Guided Learning
              </span>
              <span
                data-testid="arrow-right-icon"
              >
                →
              </span>
            </div>
          </div>
        </div>
        <div
          class="group bg-gradient-to-br from-green-50 to-emerald-50 dark:from-green-900/20 dark:to-emerald-900/20 rounded-2xl p-8 hover:shadow-xl transition-all duration-500 transform hover:scale-105 hover:-translate-y-2 cursor-pointer opacity-0 translate-y-8 "
          style="transition-delay: 1100ms;"
        >
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-green-600 rounded-full flex items-center justify-center mx-auto mb-6 group-hover:scale-110 transition-transform duration-300"
            >
              <span
                data-testid="map-icon"
              >
                🗺️
              </span>
            </div>
            <h3
              class="text-2xl font-semibold text-gray-900 dark:text-white mb-4 group-hover:text-green-600 dark:group-hover:text-green-400 transition-colors"
            >
              Free Style Learning
            </h3>
            <p
              class="text-gray-600 dark:text-gray-300 mb-6 group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
            >
              Create your own learning roadmap and explore topics at your own pace. Perfect for experienced learners.
            </p>
            <div
              class="flex items-center justify-center space-x-2 text-green-600 dark:text-green-400 font-medium"
            >
              <span>
                Start Free Style Learning
              </span>
              <span
                data-testid="arrow-right-icon"
              >
                →
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  <section
    class="py-16 px-4 sm:px-6 lg:px-8 relative z-10 transition-all duration-1000 delay-1400 opacity-0 translate-y-8"
  >
    <div
      class="max-w-7xl mx-auto"
    >
      <div
        class="bg-gradient-to-r from-indigo-50 to-purple-50 dark:from-indigo-900/20 dark:to-purple-900/20 rounded-2xl p-8 relative overflow-hidden"
      >
        <div
          class="absolute inset-0 opacity-10"
        >
          <div
            class="absolute top-4 left-4 w-2 h-2 bg-indigo-400 rounded-full animate-ping"
          />
          <div
            class="absolute top-8 right-8 w-1 h-1 bg-purple-400 rounded-full animate-pulse"
          />
          <div
            class="absolute bottom-4 left-8 w-3 h-3 bg-blue-400 rounded-full animate-bounce"
          />
          <div
            class="absolute bottom-8 right-4 w-2 h-2 bg-pink-400 rounded-full animate-ping"
          />
        </div>
        <div
          class="text-center relative z-10"
        >
          <div
            class="w-16 h-16 bg-indigo-600 rounded-full flex items-center justify-center mx-auto mb-4 animate-pulse"
          >
            <span
              data-testid="map-icon"
            >
              🗺️
            </span>
          </div>
          <h3
            class="text-2xl font-bold text-gray-900 dark:text-white mb-2"
          >
            Master Frontend Development
          </h3>
          <p
            class="text-gray-600 dark:text-gray-300 mb-6"
          >
            The complete platform to ace your frontend interviews
          </p>
          <a
            href="/get-started"
          >
            <span>
              Choose Learning Plan
            </span>
            <span
              data-testid="arrow-right-icon"
            >
              →
            </span>
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`G-UT-SNAPSHOT: Homepage Snapshot Tests should match homepage snapshot (authenticated, guided user, with active plan) 1`] = `
<div
  class="min-h-screen bg-gradient-to-br from-indigo-50 via-white to-purple-50 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900 relative overflow-hidden"
>
  <div
    class="fixed inset-0 pointer-events-none z-0"
  >
    <div
      class="absolute top-20 left-10 w-2 h-2 bg-indigo-400 rounded-full animate-pulse"
    />
    <div
      class="absolute top-40 right-20 w-3 h-3 bg-purple-400 rounded-full animate-bounce"
      style="animation-delay: 1s;"
    />
    <div
      class="absolute top-60 left-1/4 w-1 h-1 bg-blue-400 rounded-full animate-ping"
      style="animation-delay: 2s;"
    />
    <div
      class="absolute top-80 right-1/3 w-2 h-2 bg-pink-400 rounded-full animate-pulse"
      style="animation-delay: 0.5s;"
    />
    <div
      class="absolute bottom-40 left-1/3 w-3 h-3 bg-green-400 rounded-full animate-bounce"
      style="animation-delay: 1.5s;"
    />
    <div
      class="absolute bottom-60 right-10 w-1 h-1 bg-yellow-400 rounded-full animate-ping"
      style="animation-delay: 3s;"
    />
    <div
      class="absolute top-1/4 left-1/4 w-64 h-64 bg-gradient-to-r from-indigo-400/20 to-purple-400/20 rounded-full blur-3xl animate-pulse"
    />
    <div
      class="absolute bottom-1/4 right-1/4 w-80 h-80 bg-gradient-to-r from-purple-400/20 to-pink-400/20 rounded-full blur-3xl animate-pulse"
      style="animation-delay: 2s;"
    />
  </div>
  <div
    class="fixed inset-0 pointer-events-none z-0"
  >
    <div
      class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 opacity-20 dark:opacity-30"
    >
      <div
        class="absolute inset-0 bg-white/10 dark:bg-gray-800/20 rounded-full blur-sm scale-110"
      />
      <img
        alt="Elzatona Watermark"
        class="w-[400px] h-[400px] object-contain relative z-10"
        src="/elzatona-watermark.png"
      />
    </div>
  </div>
  <section
    class="relative pt-32 pb-20 px-4 sm:px-6 lg:px-8 z-10"
  >
    <div
      class="max-w-7xl mx-auto text-center"
    >
      <div
        class="mb-8"
      >
        <div
          class="relative inline-block"
        >
          <h1
            class="hero-title text-5xl md:text-6xl font-bold text-gray-900 dark:text-white mb-6 transition-all duration-1000 opacity-0 translate-y-8"
          >
            Continue JavaScript Basics
            <span
              class="block bg-gradient-to-r from-indigo-600 via-purple-600 to-blue-600 bg-clip-text text-transparent"
            >
              Interviews
            </span>
          </h1>
        </div>
        <p
          class="text-xl text-gray-600 dark:text-gray-300 max-w-3xl mx-auto leading-relaxed transition-all duration-1000 delay-300 opacity-0 translate-y-8"
        >
          Pick up where you left off with your javascript basics
        </p>
      </div>
      <div
        class="mb-12 transition-all duration-1000 delay-500 opacity-0 translate-y-8"
      >
        <div
          class="relative inline-block"
        >
          <a
            href="/guided-practice?plan=plan-789"
          >
            <div
              class="absolute inset-0 bg-gradient-to-r from-white/20 to-transparent transform -skew-x-12 -translate-x-full group-hover:translate-x-full transition-transform duration-700"
            />
            <span
              class="relative z-10 flex items-center space-x-2"
            >
              <span
                data-testid="play-icon"
              >
                ▶
              </span>
              <span>
                Continue Practice
              </span>
              <span
                data-testid="arrow-right-icon"
              >
                →
              </span>
            </span>
          </a>
        </div>
      </div>
      <div
        class="transition-all duration-1000 delay-700 opacity-0 translate-y-8"
      >
        <div
          class="grid grid-cols-2 lg:grid-cols-4 gap-6 mb-12"
        >
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-4 animate-pulse"
            />
            <div
              class="h-8 bg-gray-200 dark:bg-gray-700 rounded mb-2 animate-pulse"
            />
            <div
              class="h-4 bg-gray-200 dark:bg-gray-700 rounded animate-pulse"
            />
          </div>
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-4 animate-pulse"
            />
            <div
              class="h-8 bg-gray-200 dark:bg-gray-700 rounded mb-2 animate-pulse"
            />
            <div
              class="h-4 bg-gray-200 dark:bg-gray-700 rounded animate-pulse"
            />
          </div>
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-4 animate-pulse"
            />
            <div
              class="h-8 bg-gray-200 dark:bg-gray-700 rounded mb-2 animate-pulse"
            />
            <div
              class="h-4 bg-gray-200 dark:bg-gray-700 rounded animate-pulse"
            />
          </div>
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-4 animate-pulse"
            />
            <div
              class="h-8 bg-gray-200 dark:bg-gray-700 rounded mb-2 animate-pulse"
            />
            <div
              class="h-4 bg-gray-200 dark:bg-gray-700 rounded animate-pulse"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
  <section
    class="py-16 px-4 sm:px-6 lg:px-8 bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm relative z-10"
  >
    <div
      class="max-w-7xl mx-auto"
    >
      <div
        class="text-center mb-12"
      >
        <h2
          class="text-3xl font-bold text-gray-900 dark:text-white mb-4 transition-all duration-1000 delay-800 opacity-0 translate-y-8"
        >
          How would you like to learn?
        </h2>
        <p
          class="text-xl text-gray-600 dark:text-gray-300 transition-all duration-1000 delay-900 opacity-0 translate-y-8"
        >
          Choose your learning style to get the most personalized experience.
        </p>
      </div>
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl mx-auto"
      >
        <div
          class="group bg-gradient-to-br from-indigo-50 to-purple-50 dark:from-indigo-900/20 dark:to-purple-900/20 rounded-2xl p-8 hover:shadow-xl transition-all duration-500 transform hover:scale-105 hover:-translate-y-2 cursor-pointer opacity-0 translate-y-8 ring-2 ring-indigo-400 ring-opacity-50 shadow-lg"
          style="transition-delay: 1000ms;"
        >
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-indigo-600 rounded-full flex items-center justify-center mx-auto mb-6 group-hover:scale-110 transition-transform duration-300"
            >
              <span
                data-testid="compass-icon"
              >
                🧭
              </span>
            </div>
            <h3
              class="text-2xl font-semibold text-gray-900 dark:text-white mb-4 group-hover:text-indigo-600 dark:group-hover:text-indigo-400 transition-colors"
            >
              Guided Learning
            </h3>
            <p
              class="text-gray-600 dark:text-gray-300 mb-6 group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
            >
              Follow structured learning paths designed by experts. Perfect for beginners or those who prefer a guided approach.
            </p>
            <div
              class="flex items-center justify-center space-x-2 text-indigo-600 dark:text-indigo-400 font-medium"
            >
              <span>
                Start Guided Learning
              </span>
              <span
                data-testid="arrow-right-icon"
              >
                →
              </span>
            </div>
          </div>
        </div>
        <div
          class="group bg-gradient-to-br from-green-50 to-emerald-50 dark:from-green-900/20 dark:to-emerald-900/20 rounded-2xl p-8 hover:shadow-xl transition-all duration-500 transform hover:scale-105 hover:-translate-y-2 cursor-pointer opacity-0 translate-y-8 "
          style="transition-delay: 1100ms;"
        >
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-green-600 rounded-full flex items-center justify-center mx-auto mb-6 group-hover:scale-110 transition-transform duration-300"
            >
              <span
                data-testid="map-icon"
              >
                🗺️
              </span>
            </div>
            <h3
              class="text-2xl font-semibold text-gray-900 dark:text-white mb-4 group-hover:text-green-600 dark:group-hover:text-green-400 transition-colors"
            >
              Free Style Learning
            </h3>
            <p
              class="text-gray-600 dark:text-gray-300 mb-6 group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
            >
              Create your own learning roadmap and explore topics at your own pace. Perfect for experienced learners.
            </p>
            <div
              class="flex items-center justify-center space-x-2 text-green-600 dark:text-green-400 font-medium"
            >
              <span>
                Start Free Style Learning
              </span>
              <span
                data-testid="arrow-right-icon"
              >
                →
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  <section
    class="py-16 px-4 sm:px-6 lg:px-8 relative z-10 transition-all duration-1000 delay-1400 opacity-0 translate-y-8"
  >
    <div
      class="max-w-7xl mx-auto"
    >
      <div
        class="bg-gradient-to-r from-green-50 to-emerald-50 dark:from-green-900/20 dark:to-emerald-900/20 rounded-2xl p-8 relative overflow-hidden"
      >
        <div
          class="absolute inset-0 opacity-10"
        >
          <div
            class="absolute top-4 left-4 w-2 h-2 bg-indigo-400 rounded-full animate-ping"
          />
          <div
            class="absolute top-8 right-8 w-1 h-1 bg-purple-400 rounded-full animate-pulse"
          />
          <div
            class="absolute bottom-4 left-8 w-3 h-3 bg-blue-400 rounded-full animate-bounce"
          />
          <div
            class="absolute bottom-8 right-4 w-2 h-2 bg-pink-400 rounded-full animate-ping"
          />
        </div>
        <div
          class="text-center relative z-10"
        >
          <div
            class="w-16 h-16 bg-green-600 rounded-full flex items-center justify-center mx-auto mb-4 animate-pulse"
          >
            <span
              data-testid="play-icon"
            >
              ▶
            </span>
          </div>
          <h3
            class="text-2xl font-bold text-gray-900 dark:text-white mb-2"
          >
            Continue JavaScript Basics
          </h3>
          <p
            class="text-gray-600 dark:text-gray-300 mb-6"
          >
            Pick up where you left off with your javascript basics
          </p>
          <div
            class="mb-4 p-4 bg-white/50 dark:bg-gray-800/50 rounded-lg backdrop-blur-sm"
          >
            <div
              class="text-sm text-gray-600 dark:text-gray-300 mb-2"
            >
              Current Plan:
               
              <span
                class="font-semibold"
              >
                JavaScript Basics
              </span>
            </div>
            <div
              class="text-sm text-gray-600 dark:text-gray-300"
            >
              30
               questions •
               
              1.5 hours
            </div>
          </div>
          <a
            href="/guided-practice?plan=plan-789"
          >
            <span>
              Continue Practice
            </span>
            <span
              data-testid="arrow-right-icon"
            >
              →
            </span>
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`G-UT-SNAPSHOT: Homepage Snapshot Tests should match homepage snapshot (authenticated, self-directed user) 1`] = `
<div
  class="min-h-screen bg-gradient-to-br from-indigo-50 via-white to-purple-50 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900 relative overflow-hidden"
>
  <div
    class="fixed inset-0 pointer-events-none z-0"
  >
    <div
      class="absolute top-20 left-10 w-2 h-2 bg-indigo-400 rounded-full animate-pulse"
    />
    <div
      class="absolute top-40 right-20 w-3 h-3 bg-purple-400 rounded-full animate-bounce"
      style="animation-delay: 1s;"
    />
    <div
      class="absolute top-60 left-1/4 w-1 h-1 bg-blue-400 rounded-full animate-ping"
      style="animation-delay: 2s;"
    />
    <div
      class="absolute top-80 right-1/3 w-2 h-2 bg-pink-400 rounded-full animate-pulse"
      style="animation-delay: 0.5s;"
    />
    <div
      class="absolute bottom-40 left-1/3 w-3 h-3 bg-green-400 rounded-full animate-bounce"
      style="animation-delay: 1.5s;"
    />
    <div
      class="absolute bottom-60 right-10 w-1 h-1 bg-yellow-400 rounded-full animate-ping"
      style="animation-delay: 3s;"
    />
    <div
      class="absolute top-1/4 left-1/4 w-64 h-64 bg-gradient-to-r from-indigo-400/20 to-purple-400/20 rounded-full blur-3xl animate-pulse"
    />
    <div
      class="absolute bottom-1/4 right-1/4 w-80 h-80 bg-gradient-to-r from-purple-400/20 to-pink-400/20 rounded-full blur-3xl animate-pulse"
      style="animation-delay: 2s;"
    />
  </div>
  <div
    class="fixed inset-0 pointer-events-none z-0"
  >
    <div
      class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 opacity-20 dark:opacity-30"
    >
      <div
        class="absolute inset-0 bg-white/10 dark:bg-gray-800/20 rounded-full blur-sm scale-110"
      />
      <img
        alt="Elzatona Watermark"
        class="w-[400px] h-[400px] object-contain relative z-10"
        src="/elzatona-watermark.png"
      />
    </div>
  </div>
  <section
    class="relative pt-32 pb-20 px-4 sm:px-6 lg:px-8 z-10"
  >
    <div
      class="max-w-7xl mx-auto text-center"
    >
      <div
        class="mb-8"
      >
        <div
          class="relative inline-block"
        >
          <h1
            class="hero-title text-5xl md:text-6xl font-bold text-gray-900 dark:text-white mb-6 transition-all duration-1000 opacity-0 translate-y-8"
          >
            Build Your Custom Roadmap
            <span
              class="block bg-gradient-to-r from-indigo-600 via-purple-600 to-blue-600 bg-clip-text text-transparent"
            >
              Interviews
            </span>
          </h1>
        </div>
        <p
          class="text-xl text-gray-600 dark:text-gray-300 max-w-3xl mx-auto leading-relaxed transition-all duration-1000 delay-300 opacity-0 translate-y-8"
        >
          Create and manage your personalized learning journey
        </p>
      </div>
      <div
        class="mb-12 transition-all duration-1000 delay-500 opacity-0 translate-y-8"
      >
        <div
          class="relative inline-block"
        >
          <a
            href="/browse-practice-questions"
          >
            <div
              class="absolute inset-0 bg-gradient-to-r from-white/20 to-transparent transform -skew-x-12 -translate-x-full group-hover:translate-x-full transition-transform duration-700"
            />
            <span
              class="relative z-10 flex items-center space-x-2"
            >
              <span
                data-testid="compass-icon"
              >
                🧭
              </span>
              <span>
                View My Roadmap
              </span>
              <span
                data-testid="arrow-right-icon"
              >
                →
              </span>
            </span>
          </a>
        </div>
      </div>
      <div
        class="transition-all duration-1000 delay-700 opacity-0 translate-y-8"
      >
        <div
          class="grid grid-cols-2 lg:grid-cols-4 gap-6 mb-12"
        >
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-4 animate-pulse"
            />
            <div
              class="h-8 bg-gray-200 dark:bg-gray-700 rounded mb-2 animate-pulse"
            />
            <div
              class="h-4 bg-gray-200 dark:bg-gray-700 rounded animate-pulse"
            />
          </div>
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-4 animate-pulse"
            />
            <div
              class="h-8 bg-gray-200 dark:bg-gray-700 rounded mb-2 animate-pulse"
            />
            <div
              class="h-4 bg-gray-200 dark:bg-gray-700 rounded animate-pulse"
            />
          </div>
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-4 animate-pulse"
            />
            <div
              class="h-8 bg-gray-200 dark:bg-gray-700 rounded mb-2 animate-pulse"
            />
            <div
              class="h-4 bg-gray-200 dark:bg-gray-700 rounded animate-pulse"
            />
          </div>
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-4 animate-pulse"
            />
            <div
              class="h-8 bg-gray-200 dark:bg-gray-700 rounded mb-2 animate-pulse"
            />
            <div
              class="h-4 bg-gray-200 dark:bg-gray-700 rounded animate-pulse"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
  <section
    class="py-16 px-4 sm:px-6 lg:px-8 bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm relative z-10"
  >
    <div
      class="max-w-7xl mx-auto"
    >
      <div
        class="text-center mb-12"
      >
        <h2
          class="text-3xl font-bold text-gray-900 dark:text-white mb-4 transition-all duration-1000 delay-800 opacity-0 translate-y-8"
        >
          How would you like to learn?
        </h2>
        <p
          class="text-xl text-gray-600 dark:text-gray-300 transition-all duration-1000 delay-900 opacity-0 translate-y-8"
        >
          Choose your learning style to get the most personalized experience.
        </p>
      </div>
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl mx-auto"
      >
        <div
          class="group bg-gradient-to-br from-indigo-50 to-purple-50 dark:from-indigo-900/20 dark:to-purple-900/20 rounded-2xl p-8 hover:shadow-xl transition-all duration-500 transform hover:scale-105 hover:-translate-y-2 cursor-pointer opacity-0 translate-y-8 "
          style="transition-delay: 1000ms;"
        >
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-indigo-600 rounded-full flex items-center justify-center mx-auto mb-6 group-hover:scale-110 transition-transform duration-300"
            >
              <span
                data-testid="compass-icon"
              >
                🧭
              </span>
            </div>
            <h3
              class="text-2xl font-semibold text-gray-900 dark:text-white mb-4 group-hover:text-indigo-600 dark:group-hover:text-indigo-400 transition-colors"
            >
              Guided Learning
            </h3>
            <p
              class="text-gray-600 dark:text-gray-300 mb-6 group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
            >
              Follow structured learning paths designed by experts. Perfect for beginners or those who prefer a guided approach.
            </p>
            <div
              class="flex items-center justify-center space-x-2 text-indigo-600 dark:text-indigo-400 font-medium"
            >
              <span>
                Start Guided Learning
              </span>
              <span
                data-testid="arrow-right-icon"
              >
                →
              </span>
            </div>
          </div>
        </div>
        <div
          class="group bg-gradient-to-br from-green-50 to-emerald-50 dark:from-green-900/20 dark:to-emerald-900/20 rounded-2xl p-8 hover:shadow-xl transition-all duration-500 transform hover:scale-105 hover:-translate-y-2 cursor-pointer opacity-0 translate-y-8 ring-2 ring-green-400 ring-opacity-50 shadow-lg"
          style="transition-delay: 1100ms;"
        >
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-green-600 rounded-full flex items-center justify-center mx-auto mb-6 group-hover:scale-110 transition-transform duration-300"
            >
              <span
                data-testid="map-icon"
              >
                🗺️
              </span>
            </div>
            <h3
              class="text-2xl font-semibold text-gray-900 dark:text-white mb-4 group-hover:text-green-600 dark:group-hover:text-green-400 transition-colors"
            >
              Free Style Learning
            </h3>
            <p
              class="text-gray-600 dark:text-gray-300 mb-6 group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
            >
              Create your own learning roadmap and explore topics at your own pace. Perfect for experienced learners.
            </p>
            <div
              class="flex items-center justify-center space-x-2 text-green-600 dark:text-green-400 font-medium"
            >
              <span>
                Start Free Style Learning
              </span>
              <span
                data-testid="arrow-right-icon"
              >
                →
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  <section
    class="py-16 px-4 sm:px-6 lg:px-8 relative z-10 transition-all duration-1000 delay-1400 opacity-0 translate-y-8"
  >
    <div
      class="max-w-7xl mx-auto"
    >
      <div
        class="bg-gradient-to-r from-purple-50 to-pink-50 dark:from-purple-900/20 dark:to-pink-900/20 rounded-2xl p-8 relative overflow-hidden"
      >
        <div
          class="absolute inset-0 opacity-10"
        >
          <div
            class="absolute top-6 left-6 w-3 h-3 bg-purple-400 rounded-full animate-bounce"
          />
          <div
            class="absolute top-12 right-12 w-1 h-1 bg-pink-400 rounded-full animate-ping"
          />
          <div
            class="absolute bottom-6 left-12 w-2 h-2 bg-indigo-400 rounded-full animate-pulse"
          />
          <div
            class="absolute bottom-12 right-6 w-4 h-4 bg-blue-400 rounded-full animate-bounce"
          />
        </div>
        <div
          class="text-center relative z-10"
        >
          <div
            class="w-16 h-16 bg-purple-600 rounded-full flex items-center justify-center mx-auto mb-4 animate-pulse"
          >
            <span
              data-testid="compass-icon"
            >
              🧭
            </span>
          </div>
          <h3
            class="text-2xl font-bold text-gray-900 dark:text-white mb-2"
          >
            Self-Directed Learning
          </h3>
          <p
            class="text-gray-600 dark:text-gray-300 mb-6"
          >
            You're creating your own roadmap. Explore content freely and build your personalized learning journey.
          </p>
          <a
            href="/browse-practice-questions"
          >
            <span>
              View My Roadmap
            </span>
            <span
              data-testid="arrow-right-icon"
            >
              →
            </span>
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`G-UT-SNAPSHOT: Homepage Snapshot Tests should match homepage snapshot (unauthenticated, no userType) 1`] = `
<div
  class="min-h-screen bg-gradient-to-br from-indigo-50 via-white to-purple-50 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900 relative overflow-hidden"
>
  <div
    class="fixed inset-0 pointer-events-none z-0"
  >
    <div
      class="absolute top-20 left-10 w-2 h-2 bg-indigo-400 rounded-full animate-pulse"
    />
    <div
      class="absolute top-40 right-20 w-3 h-3 bg-purple-400 rounded-full animate-bounce"
      style="animation-delay: 1s;"
    />
    <div
      class="absolute top-60 left-1/4 w-1 h-1 bg-blue-400 rounded-full animate-ping"
      style="animation-delay: 2s;"
    />
    <div
      class="absolute top-80 right-1/3 w-2 h-2 bg-pink-400 rounded-full animate-pulse"
      style="animation-delay: 0.5s;"
    />
    <div
      class="absolute bottom-40 left-1/3 w-3 h-3 bg-green-400 rounded-full animate-bounce"
      style="animation-delay: 1.5s;"
    />
    <div
      class="absolute bottom-60 right-10 w-1 h-1 bg-yellow-400 rounded-full animate-ping"
      style="animation-delay: 3s;"
    />
    <div
      class="absolute top-1/4 left-1/4 w-64 h-64 bg-gradient-to-r from-indigo-400/20 to-purple-400/20 rounded-full blur-3xl animate-pulse"
    />
    <div
      class="absolute bottom-1/4 right-1/4 w-80 h-80 bg-gradient-to-r from-purple-400/20 to-pink-400/20 rounded-full blur-3xl animate-pulse"
      style="animation-delay: 2s;"
    />
  </div>
  <div
    class="fixed inset-0 pointer-events-none z-0"
  >
    <div
      class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 opacity-20 dark:opacity-30"
    >
      <div
        class="absolute inset-0 bg-white/10 dark:bg-gray-800/20 rounded-full blur-sm scale-110"
      />
      <img
        alt="Elzatona Watermark"
        class="w-[400px] h-[400px] object-contain relative z-10"
        src="/elzatona-watermark.png"
      />
    </div>
  </div>
  <section
    class="relative pt-32 pb-20 px-4 sm:px-6 lg:px-8 z-10"
  >
    <div
      class="max-w-7xl mx-auto text-center"
    >
      <div
        class="mb-8"
      >
        <div
          class="relative inline-block"
        >
          <h1
            class="hero-title text-5xl md:text-6xl font-bold text-gray-900 dark:text-white mb-6 transition-all duration-1000 opacity-0 translate-y-8"
          >
            Master Frontend Development
            <span
              class="block bg-gradient-to-r from-indigo-600 via-purple-600 to-blue-600 bg-clip-text text-transparent"
            >
              Interviews
            </span>
          </h1>
        </div>
        <p
          class="text-xl text-gray-600 dark:text-gray-300 max-w-3xl mx-auto leading-relaxed transition-all duration-1000 delay-300 opacity-0 translate-y-8"
        >
          The complete platform to ace your frontend interviews
        </p>
      </div>
      <div
        class="mb-12 transition-all duration-1000 delay-500 opacity-0 translate-y-8"
      >
        <div
          class="relative inline-block"
        >
          <a
            href="/get-started"
          >
            <div
              class="absolute inset-0 bg-gradient-to-r from-white/20 to-transparent transform -skew-x-12 -translate-x-full group-hover:translate-x-full transition-transform duration-700"
            />
            <span
              class="relative z-10 flex items-center space-x-2"
            >
              <span
                data-testid="play-icon"
              >
                ▶
              </span>
              <span>
                Get Started
              </span>
              <span
                data-testid="arrow-right-icon"
              >
                →
              </span>
            </span>
          </a>
        </div>
      </div>
      <div
        class="transition-all duration-1000 delay-700 opacity-0 translate-y-8"
      >
        <div
          class="grid grid-cols-2 lg:grid-cols-4 gap-6 mb-12"
        >
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-4 animate-pulse"
            />
            <div
              class="h-8 bg-gray-200 dark:bg-gray-700 rounded mb-2 animate-pulse"
            />
            <div
              class="h-4 bg-gray-200 dark:bg-gray-700 rounded animate-pulse"
            />
          </div>
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-4 animate-pulse"
            />
            <div
              class="h-8 bg-gray-200 dark:bg-gray-700 rounded mb-2 animate-pulse"
            />
            <div
              class="h-4 bg-gray-200 dark:bg-gray-700 rounded animate-pulse"
            />
          </div>
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-4 animate-pulse"
            />
            <div
              class="h-8 bg-gray-200 dark:bg-gray-700 rounded mb-2 animate-pulse"
            />
            <div
              class="h-4 bg-gray-200 dark:bg-gray-700 rounded animate-pulse"
            />
          </div>
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-4 animate-pulse"
            />
            <div
              class="h-8 bg-gray-200 dark:bg-gray-700 rounded mb-2 animate-pulse"
            />
            <div
              class="h-4 bg-gray-200 dark:bg-gray-700 rounded animate-pulse"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
  <section
    class="py-16 px-4 sm:px-6 lg:px-8 bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm relative z-10"
  >
    <div
      class="max-w-7xl mx-auto"
    >
      <div
        class="text-center mb-12"
      >
        <h2
          class="text-3xl font-bold text-gray-900 dark:text-white mb-4 transition-all duration-1000 delay-800 opacity-0 translate-y-8"
        >
          How would you like to learn?
        </h2>
        <p
          class="text-xl text-gray-600 dark:text-gray-300 transition-all duration-1000 delay-900 opacity-0 translate-y-8"
        >
          Choose your learning style to get the most personalized experience.
        </p>
      </div>
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl mx-auto"
      >
        <div
          class="group bg-gradient-to-br from-indigo-50 to-purple-50 dark:from-indigo-900/20 dark:to-purple-900/20 rounded-2xl p-8 hover:shadow-xl transition-all duration-500 transform hover:scale-105 hover:-translate-y-2 cursor-pointer opacity-0 translate-y-8 "
          style="transition-delay: 1000ms;"
        >
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-indigo-600 rounded-full flex items-center justify-center mx-auto mb-6 group-hover:scale-110 transition-transform duration-300"
            >
              <span
                data-testid="compass-icon"
              >
                🧭
              </span>
            </div>
            <h3
              class="text-2xl font-semibold text-gray-900 dark:text-white mb-4 group-hover:text-indigo-600 dark:group-hover:text-indigo-400 transition-colors"
            >
              Guided Learning
            </h3>
            <p
              class="text-gray-600 dark:text-gray-300 mb-6 group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
            >
              Follow structured learning paths designed by experts. Perfect for beginners or those who prefer a guided approach.
            </p>
            <div
              class="flex items-center justify-center space-x-2 text-indigo-600 dark:text-indigo-400 font-medium"
            >
              <span>
                Start Guided Learning
              </span>
              <span
                data-testid="arrow-right-icon"
              >
                →
              </span>
            </div>
          </div>
        </div>
        <div
          class="group bg-gradient-to-br from-green-50 to-emerald-50 dark:from-green-900/20 dark:to-emerald-900/20 rounded-2xl p-8 hover:shadow-xl transition-all duration-500 transform hover:scale-105 hover:-translate-y-2 cursor-pointer opacity-0 translate-y-8 "
          style="transition-delay: 1100ms;"
        >
          <div
            class="text-center"
          >
            <div
              class="w-16 h-16 bg-green-600 rounded-full flex items-center justify-center mx-auto mb-6 group-hover:scale-110 transition-transform duration-300"
            >
              <span
                data-testid="map-icon"
              >
                🗺️
              </span>
            </div>
            <h3
              class="text-2xl font-semibold text-gray-900 dark:text-white mb-4 group-hover:text-green-600 dark:group-hover:text-green-400 transition-colors"
            >
              Free Style Learning
            </h3>
            <p
              class="text-gray-600 dark:text-gray-300 mb-6 group-hover:text-gray-700 dark:group-hover:text-gray-200 transition-colors"
            >
              Create your own learning roadmap and explore topics at your own pace. Perfect for experienced learners.
            </p>
            <div
              class="flex items-center justify-center space-x-2 text-green-600 dark:text-green-400 font-medium"
            >
              <span>
                Start Free Style Learning
              </span>
              <span
                data-testid="arrow-right-icon"
              >
                →
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  <section
    class="final-cta-section py-16 px-4 sm:px-6 lg:px-8 relative z-10 transition-all duration-1000 delay-1500 opacity-0 translate-y-8"
  >
    <div
      class="max-w-4xl mx-auto text-center"
    >
      <div
        class="bg-gradient-to-r from-indigo-600 to-purple-600 rounded-3xl p-12 relative overflow-hidden"
      >
        <div
          class="absolute inset-0 opacity-20"
        >
          <div
            class="absolute top-4 left-4 w-8 h-8 bg-white rounded-full animate-ping"
          />
          <div
            class="absolute top-8 right-8 w-4 h-4 bg-white rounded-full animate-bounce"
          />
          <div
            class="absolute bottom-4 left-8 w-6 h-6 bg-white rounded-full animate-pulse"
          />
          <div
            class="absolute bottom-8 right-4 w-3 h-3 bg-white rounded-full animate-ping"
          />
        </div>
        <div
          class="relative z-10"
        >
          <h2
            class="text-4xl font-bold text-white mb-4"
          >
            Ready to Ace Your Interviews? 🚀
          </h2>
          <p
            class="text-xl text-indigo-100 mb-8 max-w-2xl mx-auto"
          >
            Join thousands of developers who have mastered frontend interviews with our comprehensive platform.
          </p>
          <div
            class="flex flex-col sm:flex-row gap-4 justify-center"
          >
            <a
              href="/get-started"
            >
              <span
                data-testid="play-icon"
              >
                ▶
              </span>
              <span>
                Start Learning Now
              </span>
              <span
                data-testid="arrow-right-icon"
              >
                →
              </span>
            </a>
            <a
              href="/learn"
            >
              <span
                data-testid="book-icon"
              >
                📖
              </span>
              <span>
                Explore Learning Paths
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
